--- a/int/index.html
+++ b/int/index.html
@@ -1,4 +1,4 @@
-<html><head><title>Breakthrough Society - Natural Languages</title>
+<html><head><title>Wille zur Macht - Internacional</title>
 <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
 <META http-equiv='Content-Type' content='text/html; charset=UTF-8'><style>.quote
 {
@@ -49,13 +49,13 @@ v=eval("document."+a+".mesg"); v.value+=">>"+b+"\n"; v.focus() }</script>
 </head>
 <base href="http://localhost:8080/">
 <body>
-<h1><a href=".">Breakthrough Society</a></h1>
-<h2>Natural Languages</h2>
-<table class="threads"><tr><th><form action='post.php'><input type='hidden' name='shiichan' value='writenew'><input type='hidden' name='bbs' value='lang'><input type='submit' value='New Thread'></form></th>
+<h1><a href=".">Wille zur Macht</a></h1>
+<h2>Internacional</h2>
+<table class="threads"><tr><th><form action='post.php'><input type='hidden' name='shiichan' value='writenew'><input type='hidden' name='bbs' value='int'><input type='submit' value='New Thread'></form></th>
 <th nowrap width="100%">Thread</th><th nowrap>Author</th><th
 nowrap>Posts</th><th>Last Post</th></tr>
-<tr><td colspan='5'><p style='text-align:center; padding: 1em'>This forum has no threads in it.</p></td></tr><tr><td colspan="5"><a href="list.php?bbs=lang">List All
-Threads</a> - <a href="post.php?bbs=lang&shiichan=writenew">New
+<tr><td colspan='5'><p style='text-align:center; padding: 1em'>This forum has no threads in it.</p></td></tr><tr><td colspan="5"><a href="list.php?bbs=int">List All
+Threads</a> - <a href="post.php?bbs=int&shiichan=writenew">New
 Thread</a></td></tr>
 </table>
 <table
