--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<html><head><title>Breakthrough Society</title>
+<html><head><title>Wille zur Macht</title>
 <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
 <link rel="stylesheet" href="http://localhost:8080/skin/world4ch/style.css">
 </head>
 <base href="http://localhost:8080/">
 <body>
-<h2>Breakthrough Society</h1>
+<h2>Wille zur Macht</h1>
 <dl>
-<dt><a href='lang'>Natural Languages</a><dd><dt><a href='b'>Random</a><dd></dl>
+<dt><a href='int'>Internacional</a><dd><dt><a href='meta'>Administração</a><dd><dt><a href='alea'>Aleatório</a><dd></dl>
 <div class="foot">Powered by: <a href="http://shii.org/shiichan">Shiichan</a>
 Version 3960<br>
 The contents of this page are asserted to be in the public domain by the
