--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html><head><title>Wille zur Macht</title>
 <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
-<link rel="stylesheet" href="http://localhost:8080/skin/world4ch/style.css">
+<link rel="stylesheet" href="http://willezurmacht.herokuapp.com/skin/world4ch/style.css">
 </head>
-<base href="http://localhost:8080/">
+<base href="http://willezurmacht.herokuapp.com/">
 <body>
 <h2>Wille zur Macht</h1>
 <dl>
