--- a/meta/index.html
+++ b/meta/index.html
@@ -43,11 +43,11 @@ tt
 {
 	background: #99FF99;
 }</style>
-<link rel="stylesheet" href="http://localhost:8080/skin/boston/style.css">
+<link rel="stylesheet" href="http://willezurmacht.herokuapp.com/skin/boston/style.css">
 <script type="text/javascript">function quote(b,a) { var
 v=eval("document."+a+".mesg"); v.value+=">>"+b+"\n"; v.focus() }</script>
 </head>
-<base href="http://localhost:8080/">
+<base href="http://willezurmacht.herokuapp.com/">
 <body>
 <h1><a href=".">Wille zur Macht</a></h1>
 <h2>Administração</h2>
