--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <h2>Wille zur Macht</h1>
 <dl>
-<dt><a href='int'>Internacional</a><dd><dt><a href='meta'>Administração</a><dd><dt><a href='alea'>Aleatório</a><dd></dl>
+<dt><a href='int'>Internacional</a><dd><dt><a href='meta'>Administra&#xE7;&#xE3;o</a><dd><dt><a href='alea'>Aleat&#xF3;rio</a><dd></dl>
 <div class="foot">Powered by: <a href="http://shii.org/shiichan">Shiichan</a>
 Version 3960<br>
 The contents of this page are asserted to be in the public domain by the
